# lenet5-embedded

./: 001.txt  CMakeLists.txt  Notice.c  README.md  normalization.cpp
include/: cnnoperation.h  improvedlenet5.h  lenet5params.h  matoperation.h  params.h
src/: cnnoperation.c  improvedlenet5.c  main  main.c  matoperation.c
